--- a/work/app.html
+++ b/work/app.html
@@ -10,7 +10,7 @@
     <!-- Basic Page Needs
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <title>Kaitlyn Huynh / Portfolio</title>
+    <title>Kaitlyn / Portfolio</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -64,91 +64,111 @@
         </ul>
     </div>
 
-    <div class="header_about4 container_header">
+    <div class="header_about6 container_header">
 
         <div class="container work-index">
-
-            <div class="container work-index">
-                <div class="row">
-                    <div class="one columns" id="home">
-                        <a href="../index.html">
-                            <div class="logo" href="/">&nbsp</div>
-                        </a>
-                    </div>
-                    <div class="nav-rt u-pull-right">
-                        <ul>
-                            <li>
-                                <h4><a href="../index.html">about</a></h4>
-                            </li>
-                            <li>
-                                <h4><a href="work.html">work</a></h4>
-                            </li>
-                            <li>
-                                <h4><a href="projects.html">projects</a></h4>
-                            </li>
-                            <li>
-                                <h4><a href="edu.html">edu & skills</a></h4>
-                            </li>
-                            <li>
-                                <h4><a href="fun.html">fun!</a></h4>
-                            </li>
-                        </ul>
-                    </div>
+            <div class="row">
+                <div class="one columns" id="home">
+                    <a href="../index.html">
+                        <div class="logo" href="/">&nbsp</div>
+                    </a>
                 </div>
-
                 <br></br>
+                <div class="nav-rt u-pull-right">
+                    <ul>
+                        <li>
+                            <h4><a href="../index.html">about</a></h4>
+                        </li>
+                        <li>
+                            <h4><a href="work.html">work</a></h4>
+                        </li>
+                        <li>
+                            <h4><a href="projects.html">projects</a></h4>
+                        </li>
+                        <li>
+                            <h4><a href="edu.html">edu & skills</a></h4>
+                        </li>
+                        <li>
+                            <h4><a href="fun.html">fun!</a></h4>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+
+            <br></br>
+
+            <div class="container">
 
                 <div class="typewriter">
-                    <h2>recent projects</h2>
+                    <h4 class="work-middle"><strong>Genshin Viewer.</strong></h4>
                 </div>
-
 
                 <div class="animate__animated animate__fadeIn">
-                    <div class="work-index">click on the icon to learn more.</div>
-                    <div class="row">
-                        <div class="four columns 3d art ani">
-                            <a href="weatherWardrobe.html"><img src="../Images/clothes.gif" class="project-img"></a>
-                            <p class="work-thumb">Wonderful Weather Wardrobe</p>
-                        </div>
-                        <div class="four columns 3d art ani">
-                            <a href="dessert.html"><img src="../Images/desssert.gif" class="project-img" /></a>
-                            <p class="work-thumb">Desserts! Desserts! Desserts!</p>
-                        </div>
+                    <div class="work-index">
 
+                        <strong>team.</strong>
+                        <br></br>
+                        <ul class="starlist">
+                            <li>kaitlyn huynh</li>
+                        </ul>
+
+                        <strong>technology.</strong>
+                        <br></br>
+                        <ul class="starlist">
+                            <li>Swift</li>
+                            <li>Xcode</li>
+                        </ul>
+                        <strong>description.</strong>
+                        <br></br>
+                        <p>A mobile app based off of the popular game Genshin Impact that teaches users about different
+                            characters in the game through a serieis of features. Click through an image gallery, listen
+                            to voice clips and play quiz games to learn more about characters in the game!</p>
+
+                        <strong>implementation.</strong>
+                        <br></br>
+                        <p>Initially designed mockup in and carried over assets from Figma to use in the final product.
+                            Using elements provided in Xcode and knowledge of Swift, I created functionality for
+                            selecting between characters, a quiz game, scrolling through an image gallery, and playing
+                            voice clips in 3 different languages. The user can click through these different tabs via
+                            the window selection on the bottom of the screen for seamless transition. </p>
+
+                        <strong>what i learned.</strong>
+                        <br></br>
+                        <ul class="starlist">
+                            <li>improved debugging and programming skills in swift</li>
+                            <li>more practice with Xcode interface</li>
+                            <li>using github for version control</li>
+                            <li>working with constraints and responsive design in Xcode</li>
+                        </ul>
+                        <a
+                        href="https://band-spinach-192.notion.site/4a6eb4ea78fa4ce0be1831f7ea8c42ad?v=90bb09888dd047469335633242b86fc5">&rarr;
+                        check out my documentation throughout the process</a>
+                        <strong>demo.</strong>
                     </div>
-                    <div class="row">
-                        <div class="four columns 3d art ani">
-                            <a href="app.html"><img src="../Images/seelie.gif" class="project-img" /></a>
-                            <p class="work-thumb">Genshin App</p>
-                        </div>
-                        <div class="four columns 3d art ani">
-                            <a href="villageviewer.html"><img src="../Images/snake.gif" class="project-img" /></a>
-                            <p class="work-thumb">Villager Viewer</p>
-                        </div>
-                    </div>
 
-
-                    <a href="https://github.com/kaitlynh770">
-                        <div class="row">
-                            <div class="full columns">
-                                <p class="work-thumb">GitHub &rarr;</p>
-                            </div>
-                        </div>
-                    </a>
-                    <a href = "https://creative.colorado.edu/~kahu1074/web/portfolio/interests.html">
-                        <div class="row">
-                            <div class="full columns">
-                                <p class="work-thumb">All Projects &rarr;</p>
-                            </div>
-                        </div>
-                    </a>
+                    <br></br>
+                    <br></br>
+                    <br></br>
                 </div>
+
+
+                <a href="projects.html">
+                    <p class="work-middle">&larr; other projects</p>
+                </a>
+                <a href="https://github.com/kaitlynh770/KaitlynHuynh_MAD/tree/main/Project1-backup%20copy">
+                    <div class="row">
+                        <div class="full columns">
+                            <p class="work-thumb">Project on GitHub &rarr;</p>
+                        </div>
+                    </div>
+                </a>
+
 
                 <div class="smallimg">
-                    <img src="../Images/stars.gif" />
+                    <img src="../Images/threestars.gif" />
                 </div>
                 <br></br>
-
                 <div class="row" id="superfooter">
 
                     <div class="two columns">
