--- a/work/edu.html
+++ b/work/edu.html
@@ -3,14 +3,14 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="../Images/treestump.svg">
+    <link rel="icon" href="../Images/rabbit.png">
 
 
 
     <!-- Basic Page Needs
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <title>Kevina Wong / Portfolio</title>
+    <title>Kaitlyn Huynh</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -60,15 +60,12 @@
             <li>
                 <h4><a href="fun.html">fun!</a></h4>
             </li>
-            <li>
-                <h4><a href="connect.html">connect</a></h4>
-            </li>
         </ul>
     </div>
     <!-- end of the nav -->
 
     <div class="container work-index">
-        
+
         <div class="row">
             <div class="one columns" id="home">
                 <a href="../index.html">
@@ -92,9 +89,6 @@
                     <li>
                         <h4><a href="fun.html">fun!</a></h4>
                     </li>
-                    <li>
-                        <h4><a href="connect.html">connect</a></h4>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -102,135 +96,127 @@
         <br></br>
         <br></br>
 
-        <div class = "typewriter">
+        <div class="typewriter">
             <h2>my educational background.</h2>
         </div>
-        
- 
+
+
         <div class="work-index">
             <div class="animate__animated animate__fadeIn">
 
-            <strong>high school.</strong>
-            <br></br>
-            aug 2014 - may 2018
-            <br></br>
-            I attended Smokey Hill High School located in Aurora, CO. I was a student in the <strong>International
-                Baccalaureate (I.B.) Program</strong> as well as an <strong>Advanced Placement (A.P.) Scholar</strong>.
-            At this time, I was also a member of the student government, a varsity tennis player, and a presentation
-            coordinator of the asian culture club, Next Generation Voices. Academically, I was on the honor roll as well
-            as one of the school's <strong>valedictorians</strong>.
+                <strong>high school.</strong>
+                <br></br>
+                aug 2015 - may 2019
+                <br></br>
+                I attend Smoky Hill High School located in Aurora, CO. During my time there I was in the International
+                Baccalaureate (I.B.) Program and a member of Student Government and I.B. Mentors. Other extracurriculars
+                included being the co-captain of Varsity Tennis, officer of National Honor Society (NHS) and president
+                of the asian culture club (Next Generation Voices)
 
-            <br></br>
-            <br></br>
-            <strong>college.</strong>
-            <br></br>
-            aug 2018 - expected may 2022
-            <br></br>
-            I am currently attending the University of Colorado at Boulder in the <strong>College of Engineering &
-                Applied Sciences</strong>. I am currently working towards a <strong>B.S. in Computer Science</strong> as
-            well as a <strong>Minor in Business</strong>. I am involved in the Global Engineering Residential Academic
-            Program and a part-time student worker.
+                <br></br>
+                <br></br>
+                <strong>college.</strong>
+                <br></br>
+                aug 2019 - expected may 2023
+                <br></br>
+                I am currently attending the University of Colorado at Boulder in the College of Engineering &
+                Applied Sciences and am working towards a B.S. in Creative Technology & Design. I am
+                involved in the Global Engineering Residential
+                Academic Program, CU Women in Computing and am a part-time student worker.
+                <br></br>
+                <br></br>
+                <strong>relevant courses.</strong>
+                <br></br>
 
-            <br></br>
-            <br></br>
-            <strong>relevant courses.</strong>
-            <br></br>
-
-            <div class="row">
-                <div class="three columns 3d art ani">
-                    [ fall 2018 ]
-                    <br></br>
-
-                    <ul class="starlist">
-                        <li>Intro to Programming in C++</li>
-                        <li>Meaning of Information Technology</li>
-
-
-                    </ul>
-                </div>
-                <div class="three columns 3d art ani">
-                    [ spring 2020 ]
-                    <br></br>
-
-                    <ul class="starlist">
-                        <li>Data Structures</li>
-
-                    </ul>
-                </div>
-                <div class="three columns 3d art ani">
-                    [ fall 2019 ]
-                    <br></br>
-
-                    <ul class="starlist">
-                        <li>Computer Systems</li>
-                        <li>Discrete Structures</li>
-                        <li>Marketing</li>
-                        <li>Management</li>
-
-                    </ul>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="three columns 3d art ani">
-                    [ spring 2020 ]
-                    <br></br>
-
-                    <ul class="starlist">
-                        <li>Algorithms</li>
-                        <li>Data Science w/ Probability & Statistics</li>
-                        <li>Software Development Methods & Tools</li>
-
-                    </ul>
-                </div>
-                <div class="three columns 3d art ani">
-                    [ fall 2020 ]
-                    <br></br>
-
-                    <ul class="starlist">
-                        <li>Principles of Programming Languages</li>
-                        <li>Human Computer Interaction</li>
-                        <li>Introduction to Robotics</li>
-                        <li>Accounting</li>
-                        <li>Ainance</li>
-
-                    </ul>
-                </div>
-                <div class="three columns 3d art ani">
-                    [ spring 2021 ]
-                    <br></br>
-
-                    <ul class="starlist">
-                        <li>Object-Oriented Programming & Analysis</li>
-                        <li>Advanced Data Science</li>
-                        <li>Introduction to Artificial Intelligence</li>
-                        <li>Entrepreneurship</li>
-
-                    </ul>
-                </div>
-            </div>
-            <br></br>
-            <strong>skills.</strong>
-            <br></br>
-
-            <ul class="starlist">
                 <div class="row">
-                    <div class="column">
-                        <li>C++</li>
-                        <li>Python</li>
-                        <li>HTML/CSS/JSON</li>
-                        <li>Scala</li>
-                        <li>Digital Design & Figma Prototyping</li>
+                    <div class="three columns 3d art ani">
+                        [ fall 2019 ]
+                        <br></br>
+
+                        <ul class="starlist">
+                            <li>Intro to Programming in C++</li>
+                            <li>Meaning of Information Technology</li>
+
+
+                        </ul>
                     </div>
-                    <div class=" column">
-                        <li>Numpy, MatPlotLib, Pandas, R</li>
-                        <li>MySQL</li>
-                        <li>Jupyter Notebooks</li>
-                        <li>LaTeX & Markdown</li>
-                        <li>Data Wrangling, Visualization, Analysis</li>
+                    <div class="three columns 3d art ani">
+                        [ spring 2020 ]
+                        <br></br>
+
+                        <ul class="starlist">
+                            <li>Data Structures</li>
+                            <li>Design Foundations</li>
+                        </ul>
                     </div>
-            </ul>
-        </div>
+                    <div class="three columns 3d art ani">
+                        [ fall 2020 ]
+                        <br></br>
+
+                        <ul class="starlist">
+                            <li>Human Computer Interaction</li>
+                            <li>Sound</li>
+                            <li>Image</li>
+
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="three columns 3d art ani">
+                        [ spring 2020 ]
+                        <br></br>
+
+                        <ul class="starlist">
+                            <li>Web</li>
+                            <li>Object</li>
+                            <li>Text</li>
+
+                        </ul>
+                    </div>
+                    <div class="three columns 3d art ani">
+                        [ fall 2021 ]
+                        <br></br>
+
+                        <ul class="starlist">
+                            <li>Mobile App Development</li>
+                            <li>Front End Development</li>
+                            <li>Procedural Art and Design</li>
+
+                        </ul>
+                    </div>
+                    <div class="three columns 3d art ani">
+                        [ fall 2022 ]
+                        <br></br>
+
+                        <ul class="starlist">
+                            <li>Research Methods and Professional Practice</li>
+                            <li>Form</li>
+                            <li>Software Development Methods and Tools</li>
+                        </ul>
+                    </div>
+                </div>
+                <br></br>
+                <strong>skills.</strong>
+                <br></br>
+
+                <ul class="starlist">
+                    <div class="row">
+                        <div class="column">
+                            <li>C++</li>
+                            <li>HTML/CSS/JavaScript</li>
+                            <li>React</li>
+                            <li>TypeScript</li>
+                        </div>
+                        <div class=" column">
+                            <li>Digital Design & Figma Prototyping</li>
+                            <li>Swift</li>
+                            <li>Kotlin</li>
+                            <li>C#</li>
+                            <li>Bootstrap</li>
+                        </div>
+                </ul>
+            </div>
         </div>
         <p><strong>Want to know more?</strong><br />Check out my resume.</p>
         <div class="two columns">
@@ -249,7 +235,7 @@
 
         <div class="two columns">
             <p class="text_desc_title">Email</p>
-            <p class="text_desc"><a href="mailto:kevinawongw@gmail.com?subject=Let's Talk!">kevinawongw
+            <p class="text_desc"><a href="mailto:kaitlyhhuynh8@gmail.com?subject=Let's Talk!">kaitlynhuynh8
                     @gmail.com</a></p>
         </div>
         <div class="two columns">
@@ -259,10 +245,10 @@
         <div class="two columns">
             <p class="text_desc_title">Social</p>
             <p class="text_desc">
-                <a href="http://instagram.com/kevinawongw">Instagram</a><br />
-                <a href="https://github.com/kevinawongw">GitHub</a><br />
-                <a href="https://www.linkedin.com/in/kevina-wong-977028180/">LinkedIn</a><br />
-                <a href="https://boulder.joinhandshake.com/users/12215762">HandShake</a><br />
+                <a href="https://www.instagram.com/kaitlynnnnnn88/">Instagram</a><br />
+                <a href="https://github.com/kaitlynh770">GitHub</a><br />
+                <a href="https://www.linkedin.com/in/kaitlyn-huynh-3b884a1b3/">LinkedIn</a><br />
+                <a href="https://boulder.joinhandshake.com/stu/users/18787026">HandShake</a><br />
             </p>
 
         </div>
@@ -275,6 +261,7 @@
                     href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
             </p>
         </div>
+
 
     </div>
 
