--- a/work/fun.html
+++ b/work/fun.html
@@ -3,14 +3,14 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="../Images/treestump.svg">
+    <link rel="icon" href="../Images/rabbit.png">
 
 
 
     <!-- Basic Page Needs
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <title>Kevina Wong / Portfolio</title>
+    <title>Kaitlyn Huynh / Portfolio</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -60,9 +60,6 @@
             <li>
                 <h4><a href="fun.html">fun!</a></h4>
             </li>
-            <li>
-                <h4><a href="connect.html">connect</a></h4>
-            </li>
         </ul>
     </div>
     <!-- end of the nav -->
@@ -91,9 +88,6 @@
                     <li>
                         <h4><a href="fun.html">fun!</a></h4>
                     </li>
-                    <li>
-                        <h4><a href="connect.html">connect</a></h4>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -101,32 +95,34 @@
 
         <br></br>
 
-        <div class = "typewriter">
+        <div class="typewriter">
             <h3> get to know me. <strong>Personally.</strong> </h3>
         </div>
-        
-        <br></br>
-        
+
+
         <div class="animate__animated animate__fadeIn">
-            <img class="medimg" src="../Images/food.JPG"></img>
-            <br></br><br></br>
+            <img class="centerimg" src="../Images/kaitlyn-in-sf.JPG"></img>
         </div>
 
         <br></br>
         <div class="work-index">
-            <strong>meet kevina &mdash; when she's not working.</strong>
+            <strong>meet kaitlyn &mdash; when she's not working.</strong>
             <br></br>
-            When I am not programming or studying you can find me at your local coffee shop or restaurant. I love food
-            and discovering new kinds of foods. Because of my love of food, I have also picked up baking, cooking, and
-            food photography. I used to be a barista in high school, and my love for making drinks has never left, so
-            every morning, you will definitely see me carrying a latt&eacute; that I probably made.
+            When I am not coding or studying you can find me at your local coffee shop or bakery. I love desserts
+            and discovering new shops with specialty drinks and pastries. I also have a deep appreciation for crafts
+            such as crocheting and bullet journaling. When you're in front of the screen all day, an acitvity that
+            allows
+            me to step away for a bit and do something with my hands is an amazing break that allows my brain to reset.
             <br></br>
             I love to travel as well. I have been fortunate to be able to travel to Asian countries like Japan, Vietnam,
             and Hong Kong several of times with my family. Those experiences have made me fall in love with immersing
-            myself in new cultures. I was also able to travel to China for a study-abroad program where I was able to
-            learn about it's deep-rooted history. These experiences have inspired me to learn new languages, so when I'm
-            not studying (about computer science), you might still find me studying, but about languages this time! I've
-            taken on learning Mandarin and Japanese, and I have a lot of fun learning languages.
+            myself in new cultures. After the pandemic, I definitely have a new appreciation for travelling and can't
+            wait
+            for things to start getting back to normal so that I can visit these places again! My love for travelling
+            has led to my
+            love in learning languages. With Cantonese as my native tounge and learning Japanese in high school and
+            college, I'm always studying
+            whenever I can get a chance and meeting new people to practice these skills!
         </div>
         <br></br>
         <br></br>
@@ -138,7 +134,7 @@
 
             <div class="two columns">
                 <p class="text_desc_title">Email</p>
-                <p class="text_desc"><a href="mailto:kevinawongw@gmail.com?subject=Let's Talk!">kevinawongw
+                <p class="text_desc"><a href="mailto:kaitlyhhuynh8@gmail.com?subject=Let's Talk!">kaitlynhuynh8
                         @gmail.com</a></p>
             </div>
             <div class="two columns">
@@ -148,10 +144,10 @@
             <div class="two columns">
                 <p class="text_desc_title">Social</p>
                 <p class="text_desc">
-                    <a href="http://instagram.com/kevinawongw">Instagram</a><br />
-                    <a href="https://github.com/kevinawongw">GitHub</a><br />
-                    <a href="https://www.linkedin.com/in/kevina-wong-977028180/">LinkedIn</a><br />
-                    <a href="https://boulder.joinhandshake.com/users/12215762">HandShake</a><br />
+                    <a href="hhttps://www.instagram.com/kaitlynnnnnn88/">Instagram</a><br />
+                    <a href="https://github.com/kaitlynh770">GitHub</a><br />
+                    <a href="https://www.linkedin.com/in/kaitlyn-huynh-3b884a1b3/">LinkedIn</a><br />
+                    <a href="https://boulder.joinhandshake.com/stu/users/18787026">HandShake</a><br />
                 </p>
 
             </div>
