--- a/work/villageviewer.html
+++ b/work/villageviewer.html
@@ -10,7 +10,7 @@
     <!-- Basic Page Needs
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <title>Kaitlyn Huynh / Portfolio</title>
+    <title>Kaitly Huynh / Portfolio</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -64,91 +64,117 @@
         </ul>
     </div>
 
-    <div class="header_about4 container_header">
+    <div class="header_about5 container_header">
 
         <div class="container work-index">
-
-            <div class="container work-index">
-                <div class="row">
-                    <div class="one columns" id="home">
-                        <a href="../index.html">
-                            <div class="logo" href="/">&nbsp</div>
-                        </a>
-                    </div>
-                    <div class="nav-rt u-pull-right">
-                        <ul>
-                            <li>
-                                <h4><a href="../index.html">about</a></h4>
-                            </li>
-                            <li>
-                                <h4><a href="work.html">work</a></h4>
-                            </li>
-                            <li>
-                                <h4><a href="projects.html">projects</a></h4>
-                            </li>
-                            <li>
-                                <h4><a href="edu.html">edu & skills</a></h4>
-                            </li>
-                            <li>
-                                <h4><a href="fun.html">fun!</a></h4>
-                            </li>
-                        </ul>
-                    </div>
+            <div class="row">
+                <div class="one columns" id="home">
+                    <a href="../index.html">
+                        <div class="logo" href="/">&nbsp</div>
+                    </a>
                 </div>
-
                 <br></br>
+                <div class="nav-rt u-pull-right">
+                    <ul>
+                        <li>
+                            <h4><a href="../index.html">about</a></h4>
+                        </li>
+                        <li>
+                            <h4><a href="work.html">work</a></h4>
+                        </li>
+                        <li>
+                            <h4><a href="projects.html">projects</a></h4>
+                        </li>
+                        <li>
+                            <h4><a href="edu.html">edu & skills</a></h4>
+                        </li>
+                        <li>
+                            <h4><a href="fun.html">fun!</a></h4>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+
+            <br></br>
+
+            <div class="container">
 
                 <div class="typewriter">
-                    <h2>recent projects</h2>
-                </div>
-
-
-                <div class="animate__animated animate__fadeIn">
-                    <div class="work-index">click on the icon to learn more.</div>
-                    <div class="row">
-                        <div class="four columns 3d art ani">
-                            <a href="weatherWardrobe.html"><img src="../Images/clothes.gif" class="project-img"></a>
-                            <p class="work-thumb">Wonderful Weather Wardrobe</p>
-                        </div>
-                        <div class="four columns 3d art ani">
-                            <a href="dessert.html"><img src="../Images/desssert.gif" class="project-img" /></a>
-                            <p class="work-thumb">Desserts! Desserts! Desserts!</p>
-                        </div>
-
-                    </div>
-                    <div class="row">
-                        <div class="four columns 3d art ani">
-                            <a href="app.html"><img src="../Images/seelie.gif" class="project-img" /></a>
-                            <p class="work-thumb">Genshin App</p>
-                        </div>
-                        <div class="four columns 3d art ani">
-                            <a href="villageviewer.html"><img src="../Images/snake.gif" class="project-img" /></a>
-                            <p class="work-thumb">Villager Viewer</p>
-                        </div>
-                    </div>
-
-
-                    <a href="https://github.com/kaitlynh770">
-                        <div class="row">
-                            <div class="full columns">
-                                <p class="work-thumb">GitHub &rarr;</p>
-                            </div>
-                        </div>
-                    </a>
-                    <a href = "https://creative.colorado.edu/~kahu1074/web/portfolio/interests.html">
-                        <div class="row">
-                            <div class="full columns">
-                                <p class="work-thumb">All Projects &rarr;</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="smallimg">
-                    <img src="../Images/stars.gif" />
+                    <h4 class="work-middle"><strong>Village Viewer.</strong></h4>
                 </div>
                 <br></br>
 
+                <div class="animate__animated animate__fadeIn">
+                    <div class="work-index">
+
+                        <strong>technology.</strong>
+                        <br></br>
+                        <ul class="starlist">
+                            <li>kotlin</li>
+                            <li>Android Studio</li>
+                        </ul>
+                        <strong>description.</strong>
+                        <br></br>
+                        <p>An app developed in Android Studio that showcases 30 villages in the popular game Animal
+                            Crossing New Horizons. Displays villagers in a list where users can click on a villager to
+                            learn more about them. </p>
+
+                        <strong>implementation.</strong>
+                        <br></br>
+                        <p>Initially designed mockup in and carried over assets from Figma to use in the final product.
+                            Implemented a scroll view for both portrait and landscape view to allow users to easily look
+                            through villagers. Set villager attributes and traits and then added them into the list
+                            view. </p>
+
+                        <strong>what i learned.</strong>
+                        <br></br>
+                        <ul class="starlist">
+                            <li>debugging and coding in Kotlin</li>
+                            <li>using Android Studio interface and adding functionality for elements in Kotlin</li>
+                            <li>designing a project from ground up </li>
+                            <li>working with a new language and learning the syntax</li>
+                        </ul>
+                    </div>
+                    <a
+                        href="https://band-spinach-192.notion.site/4a6eb4ea78fa4ce0be1831f7ea8c42ad?v=90bb09888dd047469335633242b86fc5">&rarr;
+                        check out my documentation throughout the process</a>
+
+                    <div class="row">
+                        <div class="column">
+                            <div class="medimg">
+                                <img src="../Images/listview.png" />
+                            </div>
+                        </div>
+                        <div class="column">
+                            <div class="medimg">
+                                <img src="../Images/villager.png" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <br></br>
+                    <br></br>
+                    <br></br>
+                </div>
+
+
+                <a href="projects.html">
+                    <p class="work-middle">&larr; other projects</p>
+                </a>
+                <a href="https://github.com/kaitlynh770/KaitlynHuynh_MAD/tree/main/Project2-VillagerPlanner">
+                    <div class="row">
+                        <div class="full columns">
+                            <p class="work-thumb">Project on GitHub &rarr;</p>
+                        </div>
+                    </div>
+                </a>
+
+
+                <div class="smallimg">
+                    <img src="../Images/sparklies.gif" />
+                </div>
+                <br></br>
                 <div class="row" id="superfooter">
 
                     <div class="two columns">
@@ -163,7 +189,7 @@
                     <div class="two columns">
                         <p class="text_desc_title">Social</p>
                         <p class="text_desc">
-                            <a href="https://www.instagram.com/kaitlynnnnnn88/">Instagram</a><br />
+                            <a href="http://instagram.com/kevinawongw">Instagram</a><br />
                             <a href="https://github.com/kaitlynh770">GitHub</a><br />
                             <a href="https://www.linkedin.com/in/kaitlyn-huynh-3b884a1b3/">LinkedIn</a><br />
                             <a href="https://boulder.joinhandshake.com/stu/users/18787026">HandShake</a><br />
