--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="Images/treestump.svg">
+    <link rel="icon" href="Images/rabbit.png">
 
 
 
@@ -60,9 +60,6 @@
             <li>
                 <h4><a href="work/fun.html">fun!</a></h4>
             </li>
-            <li>
-                <h4><a href="work/connect.html">connect</a></h4>
-            </li>
         </ul>
     </div>
     <!-- end of the nav -->
@@ -91,9 +88,6 @@
                         </li>
                         <li>
                             <h4><a href="work/fun.html">fun!</a></h4>
-                        </li>
-                        <li>
-                            <h4><a href="work/connect.html">connect</a></h4>
                         </li>
                     </ul>
                 </div>
@@ -140,7 +134,7 @@
 
         <div class="two columns">
             <p class="text_desc_title">Email</p>
-            <p class="text_desc"><a href="mailto:kevinawongw@gmail.com?subject=Let's Talk!">kevinawongw
+            <p class="text_desc"><a href="mailto:kaitlyhhuynh8@gmail.com?subject=Let's Talk!">kaitlynhuynh8
                     @gmail.com</a></p>
         </div>
         <div class="two columns">
@@ -150,10 +144,10 @@
         <div class="two columns">
             <p class="text_desc_title">Social</p>
             <p class="text_desc">
-                <a href="http://instagram.com/kevinawongw">Instagram</a><br />
-                <a href="https://github.com/kevinawongw">GitHub</a><br />
-                <a href="https://www.linkedin.com/in/kevina-wong-977028180/">LinkedIn</a><br />
-                <a href="https://boulder.joinhandshake.com/users/12215762">HandShake</a><br />
+                <a href="https://www.instagram.com/kaitlynnnnnn88/">Instagram</a><br />
+                <a href="https://github.com/kaitlynh770">GitHub</a><br />
+                <a href="https://www.linkedin.com/in/kaitlyn-huynh-3b884a1b3/">LinkedIn</a><br />
+                <a href="https://boulder.joinhandshake.com/stu/users/18787026">HandShake</a><br />
             </p>
 
         </div>
