--- a/work/dessert.html
+++ b/work/dessert.html
@@ -7,16 +7,19 @@
 
 
 
-    <!-- Basic Page Needs -->
+    <!-- Basic Page Needs
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
     <title>Kaitlyn Huynh / Portfolio</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- Mobile Specific Metas -->
+    <!-- Mobile Specific Metas
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- CSS -->
+    <!-- CSS
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link href="../normalize.css" rel="stylesheet">
     <link href="../skeleton.css" rel="stylesheet">
     <link href="../custom.css" rel="stylesheet">
@@ -29,8 +32,9 @@
 </head>
 
 <body class="work">
-    <!-- Header + Nav –– -->
-    <!-- mobile nav  -->
+    <!-- Header + Nav
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <!-- mobile nav bruh -->
 
     <div class="mobile-header">
         <a href='../index.html'>
@@ -60,8 +64,7 @@
         </ul>
     </div>
 
-    <div class="header_about2 container_header">
-
+    <div class="header_about7 container_header">
 
         <div class="container work-index">
             <div class="row">
@@ -96,79 +99,88 @@
             <br></br>
 
             <div class="container">
+
+                <div class="typewriter">
+                    <h4 class="work-middle"><strong>Desserts! Dessserts! Desserts!</strong></h4>
+                </div>
+
+                <br></br>
+
                 <div class="animate__animated animate__fadeIn">
-                    <div class="row">
-                        <div class="four columns">
-                            <p class="super_about">Kaitlyn Huynh &mdash; Creative Technologist, Designer, Programmer
-                                &mdash; <br>Denver,
-                                CO</br></p>
+                    <div class="work-index">
 
-                            <p>The first time I ever coded was my freshman year of college. Feeling lost and anxious, I
-                                panicked and switch to Computer Science on a whim. I was still a little uneasy when I
-                                first started coding and learning about what it does. However, after seeing my first
-                                "Hello World" pop up in the terminal got me excited and anticipating all the amamzing
-                                applications and websites I could build with just the keys in front of me. Of course,
-                                I ended up switching to a different major, but it just helped me realize my passion for
-                                Front-end development. CTD is a major that aims to combine and unite the fields of art
-                                and technology, and Front-end development lies at the intersection. I hope to use my
-                                unique
-                                skillset and perspective to change the tech industry.
-                            </p>
+                        <strong>team.</strong>
+                        <br></br>
+                        <ul class="starlist">
+                            <li>kaitlyn huynh</li>
+                        </ul>
 
-                            <p>As a current student, the field of technology is still an open area of exploration.
-                                Fields that I'm particulary interested in is Front-end development as my passion lies in
-                                learning different frameworks and languages to build UIs and applications that people
-                                all
-                                over the world can interact with. Full-stack development is another field I'm quite
-                                interested
-                                in since I love the process of builing a website/application from bottom up; the
-                                connection between
-                                the two is important and something I would love to gain a deeper understanding of.</p>
+                        <strong>technology.</strong>
+                        <br></br>
+                        <ul class="starlist">
+                            <li>html</li>
+                            <li>css</li>
+                            <li>javascript</li>
+                            <li>AOS library</li>
+                            <li>Animate.css</li>
+                        </ul>
+                        <strong>description.</strong>
+                        <br></br>
+                        <p>I wanted to create a website that utilized different libraries to educate and entertain users
+                            when learning about desserts from different cultures. I specifically chose Asian desserts
+                            since I have such a personal connection with them and wanted to spread my love and knowledge
+                            of it to others. As users scroll down the page, desserts fade in and out of the page in a
+                            descending fashion. Each card that pops up is clickable and will bring the user to a page of
+                            information about the dessert.</p>
 
-                        </div>
+                        <strong>implementation.</strong>
+                        <br></br>
+                        <p>I created mockups in Figma before proceeding to code the project. I wanted a fun and
+                            interactive way for people to learn about desserts from Asian cultures, so I decided to use
+                            animation-based libriaries for the interactivity element and implemented GIFs to add more
+                            dynamic animation instead of just static images. I used jQuery for the animation throughout
+                            the page and attached different classes to different elements to have the animation take
+                            place. I used JavaScript for adding event listeners to different interactions in the page
+                            and used HTML and CSS for marking up and decorating the page.</p>
 
-                        <div class="five columns">
-                            <strong>I am a Leader.</strong>
-                            <p>Here's Why.
-                                <p>
-                                    <strong>Passion</strong> <br>I constantly find love in what I do especially when it
-                                    comes to
-                                    my computer science and technology classes. I am someone who will stay up all night
-                                    from
-                                    the
-                                    <strong>excitement</strong> of a project.
-                                    <br>As someone who loves design and creation, I am truly
-                                    invested in
-                                    details. I am someone who will produce carefully detailed deliverables and ensure
-                                    that
-                                    there
-                                    are no errors in sight. <strong>Big or small.</strong></br>
-                                    <br></br>
+                        <strong>achievements.</strong>
+                        <br></br>
+                        <ul class="starlist">
+                            <li>learned the basics of animation in jQuery</li>
+                            <li>learned to use JavaScript for mainpulating DOM</li>
+                            <li>practiced intergrating different libraries and how syntax may change between them</li>
+                            <li>created a project from design to implementation</li>
+                        </ul>
 
-                                    <strong>Learner</strong> <br>I am a fast learner, and I love to apply my current
-                                    knowledge
-                                    to <strong>new experiences</strong> and <strong>new ideas</strong>. I am someone who
-                                    will
-                                    constantly research something I want to know about until I fully understand what and
-                                    why.</strong></br>
-
-                        </div>
-
-                        <div class="five columns">
-                            <p></p>
-                            <p><strong>Want to know more?</strong><br />Check out my resume.</p>
-                            <a href="resume.html">
-                                <p class="contact_button">resume</p>
-                            </a>
+                        <strong>demo.</strong>
+                        <div class="medimg">
+                            <a href= 'https://creative.colorado.edu/~kahu1074/front-end-development/Project%201/project1.html'><img src="../Images/desserts.png"></a>
                         </div>
                     </div>
                 </div>
+
                 <br></br>
                 <br></br>
+                <br></br>
+
+
+                <a href="projects.html">
+                    <p class="work-middle">&larr; other projects</p>
+                </a>
+                <a href="https://github.com/kaitlynh770/desserts">
+                    <div class="row">
+                        <div class="full columns">
+                            <p class="work-thumb">Project on GitHub &rarr;</p>
+                        </div>
+                    </div>
+                </a>
+
+
                 <div class="smallimg">
-                    <img src="../Images/swirls.gif" />
+                    <img src="../Images/flower.gif" />
                 </div>
                 <br></br>
+
                 <div class="row" id="superfooter">
 
                     <div class="two columns">
@@ -183,7 +195,7 @@
                     <div class="two columns">
                         <p class="text_desc_title">Social</p>
                         <p class="text_desc">
-                            <a href="https://www.instagram.com/kaitlynnnnnn88/">Instagram</a><br />
+                            <a href="http://instagram.com/kevinawongw">Instagram</a><br />
                             <a href="https://github.com/kaitlynh770">GitHub</a><br />
                             <a href="https://www.linkedin.com/in/kaitlyn-huynh-3b884a1b3/">LinkedIn</a><br />
                             <a href="https://boulder.joinhandshake.com/stu/users/18787026">HandShake</a><br />
@@ -202,6 +214,7 @@
 
 
                 </div>
+
 
 
             </div>
