--- a/work/weatherWardrobe.html
+++ b/work/weatherWardrobe.html
@@ -64,91 +64,107 @@
         </ul>
     </div>
 
-    <div class="header_about4 container_header">
+    <div class="header_about3 container_header">
 
         <div class="container work-index">
-
-            <div class="container work-index">
-                <div class="row">
-                    <div class="one columns" id="home">
-                        <a href="../index.html">
-                            <div class="logo" href="/">&nbsp</div>
-                        </a>
-                    </div>
-                    <div class="nav-rt u-pull-right">
-                        <ul>
-                            <li>
-                                <h4><a href="../index.html">about</a></h4>
-                            </li>
-                            <li>
-                                <h4><a href="work.html">work</a></h4>
-                            </li>
-                            <li>
-                                <h4><a href="projects.html">projects</a></h4>
-                            </li>
-                            <li>
-                                <h4><a href="edu.html">edu & skills</a></h4>
-                            </li>
-                            <li>
-                                <h4><a href="fun.html">fun!</a></h4>
-                            </li>
-                        </ul>
-                    </div>
+            <div class="row">
+                <div class="one columns" id="home">
+                    <a href="../index.html">
+                        <div class="logo" href="/">&nbsp</div>
+                    </a>
                 </div>
-
                 <br></br>
+                <div class="nav-rt u-pull-right">
+                    <ul>
+                        <li>
+                            <h4><a href="../index.html">about</a></h4>
+                        </li>
+                        <li>
+                            <h4><a href="work.html">work</a></h4>
+                        </li>
+                        <li>
+                            <h4><a href="projects.html">projects</a></h4>
+                        </li>
+                        <li>
+                            <h4><a href="edu.html">edu & skills</a></h4>
+                        </li>
+                        <li>
+                            <h4><a href="fun.html">fun!</a></h4>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+
+            <br></br>
+
+            <div class="container">
 
                 <div class="typewriter">
-                    <h2>recent projects</h2>
+                    <h4 class="work-middle"><strong>Wonderful Weather Wardrobe.</strong></h4>
                 </div>
 
 
+                <br></br>
                 <div class="animate__animated animate__fadeIn">
-                    <div class="work-index">click on the icon to learn more.</div>
-                    <div class="row">
-                        <div class="four columns 3d art ani">
-                            <a href="weatherWardrobe.html"><img src="../Images/clothes.gif" class="project-img"></a>
-                            <p class="work-thumb">Wonderful Weather Wardrobe</p>
-                        </div>
-                        <div class="four columns 3d art ani">
-                            <a href="dessert.html"><img src="../Images/desssert.gif" class="project-img" /></a>
-                            <p class="work-thumb">Desserts! Desserts! Desserts!</p>
-                        </div>
+                    <div class="work-index">
+                        <strong>team.</strong>
+                        <br></br>
+                        <ul class="starlist">
+                            <li>kaitlyn huynh</li>
+                            <li>patricia chin</li>
+                        </ul>
 
+                        <strong>technology.</strong>
+                        <br></br>
+                        <ul class="starlist">
+                            <li>react</li>
+                            <li>open weather api</li>
+                        </ul>
+                        <strong>description.</strong>
+                        <br></br>
+                        <p>This project takes in a series of inputs from the user such as location, clothing items, and
+                            fashion style desired. Based off of all those inputs,
+                            the application will determine the best outfit for the user's environment and wants. </p>
+
+                        <strong>implementation.</strong>
+                        <br></br>
+                        This project was fully devloped in React and it's purpose was to showcase our knowledge of the
+                        versatile framework. With the use of Hooks, we were able to sucessfully make API calls and pass
+                        information between components seamlessly. The application starts off asking the user for their
+                        location (city, country). Based off of that information, it wil make a call to the OpenWeather
+                        API and grab the weather data for that particular city. This action then displays the wardrobe
+                        inventory that allows users to input their own wardrobe items (shirts, pants, cardigans, etc.).
+                        They can then select from 4 buttons - each creating a different fashion style - and the
+                        application will then suggest the outfit the user wears while informing them of the weather.
+                        <br></br>
+                        <a
+                            href="https://band-spinach-192.notion.site/d2b84d6cdf6548468d38e195cd34137e?v=c1ab5e2828d64a2c9479ae112f101cba">&rarr;
+                            check out my documentation throughout the process</a>
+                        <a
+                            href='https://creative.colorado.edu/~kahu1074/front-end-development/Project2/Project2-Final/'>
+                            <img src="../Images/wonderfulwardrobe.png" width="2.3vw" /></a>
                     </div>
-                    <div class="row">
-                        <div class="four columns 3d art ani">
-                            <a href="app.html"><img src="../Images/seelie.gif" class="project-img" /></a>
-                            <p class="work-thumb">Genshin App</p>
-                        </div>
-                        <div class="four columns 3d art ani">
-                            <a href="villageviewer.html"><img src="../Images/snake.gif" class="project-img" /></a>
-                            <p class="work-thumb">Villager Viewer</p>
-                        </div>
-                    </div>
 
-
-                    <a href="https://github.com/kaitlynh770">
-                        <div class="row">
-                            <div class="full columns">
-                                <p class="work-thumb">GitHub &rarr;</p>
-                            </div>
-                        </div>
-                    </a>
-                    <a href = "https://creative.colorado.edu/~kahu1074/web/portfolio/interests.html">
-                        <div class="row">
-                            <div class="full columns">
-                                <p class="work-thumb">All Projects &rarr;</p>
-                            </div>
-                        </div>
-                    </a>
+                    <br></br>
                 </div>
+
+                <a href="projects.html">
+                    <p class="work-middle">&larr; other projects</p>
+                </a>
+                <a href="https://github.com/kaitlynh770/WonderfulWardrobe-React">
+                    <div class="row">
+                        <div class="full columns">
+                            <p class="work-thumb">Project on GitHub &rarr;</p>
+                        </div>
+                    </div>
+                </a>
+
 
                 <div class="smallimg">
-                    <img src="../Images/stars.gif" />
+                    <img src="../Images/clouds.gif" />
                 </div>
                 <br></br>
-
                 <div class="row" id="superfooter">
 
                     <div class="two columns">
