--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="work-middle">
                 Welcome
             </div>
-            <img class = "centerimg" src="Images/coffee-shop.JPEG"></img>
+            <img class="centerimg" src="Images/coffee-shop.JPEG"></img>
         </div>
 
 
@@ -116,9 +116,20 @@
         <div class="work-index">
             <strong>About Me.</strong>
             <br></br>
-            Hello! My name is Kaitlyn Huynh. I'm currently a senior in the Creative Technology & Design program (formerly known as Technology, Arts & Media AKA TAM). I was born in Aurora, Colorado and have lived here ever since. I am an INFJ type, which is known as the Advocates type. INFJ stands for Introvert, Intuitive, Feeling and Judging. People with my personality type often strive to do the right thing and choose to focus on teamwork and cooperation. Their strength lies in communication and becauase of that, they're able to form strong and lasting relationships with others. I hope that this little introduction has given you some insight on what type of person I am and how I can work alongside others!
+            Hello! My name is Kaitlyn Huynh. I'm currently a senior in the Creative Technology & Design program
+            (formerly known as Technology, Arts & Media AKA TAM). I was born in Aurora, Colorado and have lived here
+            ever since. I am an INFJ type, which is known as the Advocates type. INFJ stands for Introvert, Intuitive,
+            Feeling and Judging. People with my personality type often strive to do the right thing and choose to focus
+            on teamwork and cooperation. Their strength lies in communication and becauase of that, they're able to form
+            strong and lasting relationships with others. I hope that this little introduction has given you some
+            insight on what type of person I am and how I can work alongside others!
             <br></br>
-            I'm passionate about front-end development and learning about the different frameworks and languages associate with it; the idea of combining UI/UX is with coding is something I heavily resonate with and reflects the values and skills I learned through my program at CU Boulder. Through my coursework and jobs, I've developed skills in Software Development, Mobile App Development, and Front-end Development that I hope to incorporate in my career. As someone passionate about Front-End development, I love learning about new and innovative ways to develop applications for all sorts of industries!
+            I'm passionate about front-end development and learning about the different frameworks and languages
+            associated with it; the idea of combining UI/UX is with coding is something I heavily resonate with and
+            reflects the values and skills I learned through my program at CU Boulder. Through my coursework and jobs,
+            I've developed skills in Software Development, Mobile App Development, and Front-end Development that I hope
+            to incorporate in my career. As someone passionate about Front-end development, I love learning about new
+            and innovative ways to develop applications for all sorts of industries!
             <br></b>
         </div>
     </div>
